<resources>
    <string name="app_name">Quiz of king</string>
    <string name="action_settings">Settings</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="sign_in_why">Sign in to share your score with your friends and sync across your devices.</string>
    <string name="you_are_signed_in">You are signed in as %1$s (%2$s).</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_to_upload_this_score">Sign in now to upload this score, save your achievements and share your progress with friends.</string>
    <string name="players_exception">There was an issue communicating with players.</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="played_time">Played %s</string>
    <string name="total_questions_asked">Total questions asked : %s</string>
    <string name="friend_state">It seems that %s hasn\'t played any game yet.</string>
    <string name="points">%s Points</string>
    <string name="user_state">It seems that you haven\'t played yet, Play a quiz to view your scores here.</string>
    <string name="account_info">Account Info</string>
    <string name="reset_token">Reset Token</string>
    <string name="about">About</string>
    <string name="show_intro">Show Intro</string>
    <string name="web_client_id">171246766943-gpcjg30bhpr58niar58fu85utu8k6l8c.apps.googleusercontent.com</string>
    <string name="app_id">171246766943</string>

    <string name="ads_app_id">ca-app-pub-9303426545367298~2223386584</string>

    <string name="banner_id_1">ca-app-pub-9303426545367298/7186872997</string>
    <string name="banner_id_2">ca-app-pub-9303426545367298/7681697018</string>
    <string name="interstitial_id_1">ca-app-pub-9303426545367298/1934546319</string>

    <string name="test_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_id_3">ca-app-pub-9303426545367298/7109785710</string>
    <string name="register_name">Register</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="button">Button</string>
    <string name="login_name">Login</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="start_game">start game</string>
    <string name="setting">setting</string>
    <string name="profile">profile</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="main_menu">Main Menu</string>
    <string name="scoreboard_name">Scoreboard</string>
    <string name="rank">Rank</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="scoreboard">scoreboard</string>
    <string name="exit">exit</string>
    <string name="logout">logout</string>
    <string name="dont_have_an_account">don\'t have an account?</string>
    <string name="profile_name">Profile</string>
    <string name="change_email">change email</string>
    <string name="apply">Apply</string>
    <string name="email">Email:</string>
    <string name="score">Score:</string>
    <string name="change_username">change username</string>
</resources>
