<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/gameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40pt"
            android:layout_marginEnd="40pt"
            android:backgroundTint="@color/purple_700"

            android:text="@string/start_game" />



        <Button
            android:id="@+id/profileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40pt"
            android:layout_marginEnd="40pt"
            android:backgroundTint="@color/purple_700"
            android:text="@string/profile" />

        <Button
            android:id="@+id/settingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40pt"
            android:layout_marginEnd="40pt"
            android:backgroundTint="@color/purple_700"
            android:text="@string/setting" />

        <Button
            android:id="@+id/scoreboardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40pt"
            android:layout_marginEnd="40pt"
            android:backgroundTint="@color/purple_700"
            android:text="@string/scoreboard" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60pt"
            android:layout_marginEnd="60pt"
            android:backgroundTint="#FF0000"
            android:text="@string/exit" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>